--- a/components/Account/UpdateForm.module.css
+++ b/components/Account/UpdateForm.module.css
@@ -76,7 +76,7 @@
     background: transparent;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    resize: vertical; /* Allows vertical resizing of textarea */
+    resize: vertical;
 }
 
 .inputFieldError label {
@@ -143,6 +143,14 @@
 @media (prefers-color-scheme: light) {
     .formContainerStyling {
         background-color: #fff;
+    }
+    .inputField label {
+        background-color: white;
+    }
+    .inputField input,
+    .inputField textarea {
+        border: 1px solid #d3d3d3;
+        color: black;
     }
 }
 
