--- a/components/TypingTest/TypingTest.module.css
+++ b/components/TypingTest/TypingTest.module.css
@@ -143,6 +143,13 @@
     transition: left 0.1s ease-out;
 }
 
+.birthday {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin: 20px;
+}
+
 .caps {
     z-index: -10;
     position: absolute;
